plugins {
    id 'war'
    id 'java'
    id 'jacoco'
    id 'application'
    id 'maven-publish'
    id 'co.uzzu.dotenv.gradle' version '2.0.0'
    id 'de.undercouch.download' version '5.1.0'
    id 'org.springframework.boot' version '2.7.1'
    id 'org.barfuin.gradle.taskinfo' version '1.4.0'
    id 'com.github.ben-manes.versions' version '0.42.0'
    id 'com.github.dawnwords.jacoco.badge' version '0.2.4'
}

group = 'org.bbaw.aaew.tla'
version = '0.0.825-dev'
sourceCompatibility = '17'

ext {
    fontawesomeVersion = env.FONTAWESOME_VERSION.orElse('5.12.1')
    bootstrapVersion = env.BOOTSTRAP_VERSION.orElse('4.6.0')
    jqueryVersion = env.JQUERY_VERSION.orElse('3.6.0')
    cookieJsVersion = env.COOKIEJS_VERSION.orElse('2.2.1')
    cookieBannerVersion = env.COOKIE_BANNER_VERSION.orElse('1.2.2')
    fontawesomeSrc = "https://use.fontawesome.com/releases/v${fontawesomeVersion}/fontawesome-free-${fontawesomeVersion}-web.zip"
    bootstrapSrc = "https://github.com/twbs/bootstrap/releases/download/v${bootstrapVersion}/bootstrap-${bootstrapVersion}-dist.zip"
    jquerySrc = "https://code.jquery.com/jquery-${jqueryVersion}.min.js"
    cookieJsSrc = "https://github.com/js-cookie/js-cookie/releases/download/v${cookieJsVersion}/js.cookie-${cookieJsVersion}.min.js"
    cookieBannerSrc = "https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@${cookieBannerVersion}/dist/cookiebanner.min.js"
    staticDir = 'src/main/resources/static'
    vendorDir = "${staticDir}/vendor"
}

def assets = [
  'cookieJs' : [cookieJsSrc, 'js.cookie.min.js'],
  'cookieBanner': [cookieBannerSrc, 'cookiebanner.min.js'],
  'jquery': [jquerySrc, 'jquery.min.js'],
  'headroomJs': ['https://unpkg.com/headroom.js/dist/headroom.min.js', 'headroom.min.js']
]

def frameworks = [
  'bootstrap': [bootstrapSrc, "${staticDir}/vendor/bootstrap-${bootstrapVersion}-dist"],
  'fontawesome': [fontawesomeSrc, "${staticDir}/vendor/fontawesome-free-${fontawesomeVersion}-web"]
]

publishing {
    publications {
        maven(MavenPublication) {
            artifactId = 'tla-web'
            pom {
                name = 'TLA Web Frontend'
                description = 'HTML frontend for the Thesaurus Linguae Aegyptiae web component'
            }
            from components.java
        }
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.spring.io/milestone' }
}

configurations {
    // use jetty instead of default servlet container (tomcat)
    implementation.exclude module: 'spring-boot-starter-tomcat'

    implementation.exclude module: 'spring-boot-starter-logging'

    testImplementation.exclude group: 'org.junit.vintage'
    testImplementation.exclude module: 'junit-vintage-engine'
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

    implementation 'org.modelmapper:modelmapper:3.1.0'
    implementation 'org.jooq:jool:0.9.14'

    implementation 'org.springframework.boot:spring-boot-starter-jetty:3.0.0-M3'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.0-M3'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.0.0-M3'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
    implementation 'org.slf4j:slf4j-simple:2.0.0-alpha7'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    implementation 'com.github.jkatzwinkel:tla-common:main-SNAPSHOT'
    implementation 'com.github.rosmord.jsesh:jsesh:7.3.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.0-M3'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0-RC1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0-RC1'
}

task installAssets {
    description = 'Download and install third-party JS/CSS frameworks and libraries'
    dependsOn 'installFontRoboto'
    outputs.files(
        file("${vendorDir}/")
    )
}

task updateAssets {
    group = 'Init'
    description = 'Removes and re-installs third-party ressources added with :installAssets.'
    dependsOn 'cleanAssets'
    dependsOn 'installAssets'
}

def createDownloadAssetTask(String name, String url, String destFile) {
  return tasks.create("download${name.capitalize()}", Download) {
    doFirst {
      mkdir "${staticDir}/vendor"
    }
    description = "Download && install ${name}"
    src "${url}"
    dest file("${staticDir}/vendor/${destFile}")
    onlyIfModified true
  }
}

assets.each {
  entry -> installAssets.dependsOn createDownloadAssetTask(
    entry.key, entry.value[0], entry.value[1]
  )
}

frameworks.each {
  entry -> installAssets.dependsOn installFrameworkTask(
    entry.key, entry.value[0], entry.value[1]
  )
}

task downloadFontRoboto(type: Download) {
    group = 'Init'
    description = 'Download Google Roboto font'
    src 'https://google-webfonts-helper.herokuapp.com/api/fonts/roboto?download=zip&subsets=latin&variants=300,500,700,300italic,regular,italic,700italic'
    dest new File(buildDir, 'roboto.zip')
    onlyIfModified true
}

def downloadFrameworkTask(String name, String url) {
    return tasks.create("download${name.capitalize()}", Download) {
      description = "Downloads ${name.capitalize()} distrubution into build directory."
      src "${url}"
      dest new File(buildDir, "${name}.zip")
      onlyIfModified true
      outputs.files(
        new File(buildDir, "${name}.zip")
      )
    }
}

def installFrameworkTask(String name, String url, String dir) {
    return tasks.create("install${name.capitalize()}", Copy) {
      inputs.files(
        new File(buildDir, "${name}.zip")
      )
      group = 'Init'
      description = "Installs ${name.capitalize()} distribution into assets directory."
      dependsOn downloadFrameworkTask(name, url)
      doFirst {
        mkdir "${vendorDir}"
      }
      if (!file("${vendorDir}/${name}").exists()) {
        from zipTree(
          new File(buildDir, "${name}.zip")
        )
        into file("${vendorDir}")
        doLast {
            file("${dir}").renameTo(
              file("${vendorDir}/${name}")
            )
        }
      }
      outputs.files(
        file("${vendorDir}/${name}")
      )
    }
}

task installFontRoboto(dependsOn: downloadFontRoboto, type: Copy) {
    group = 'Init'
    description = 'Installs Google Roboto font'
    from zipTree(downloadFontRoboto.dest)
    into file("${staticDir}/font")
}

task install {
    inputs.files(
      file('.env')
    )
    group = 'Init'
    description = 'Installs additional resources required for running the app'
    dependsOn 'installAssets'
    outputs.files(
      file("${staticDir}/vendor/")
    )
}

task cleanAssets(type: Delete) {
    group = 'Init'
    description = 'Delete files added with :installAssets'
    dependsOn 'cleanInstallAssets'
    frameworks.each {
      entry -> cleanAssets.dependsOn "cleanDownload${entry.key.capitalize()}"
    }
    delete "${staticDir}/vendor/"
    delete fileTree("${staticDir}/font") {
        include "roboto*"
    }
}

clean {
    dependsOn 'cleanInstall'
}

springBoot {
    buildInfo()
}

bootJar {
    dependsOn 'install'
}

def installationReminder() {
  if ( !file("${staticDir}/vendor/").exists() ) {
    println ' ======================================'
    println ' !!!  Must run task :install first: !!!'
    println ' !!!                                !!!'
    println ' !!!     ./gradlew.bat install      !!!'
    println ' ======================================'
    throw new StopExecutionException()
  }
}


bootRun {
    systemProperty 'spring.profiles.active', 'dev'
    doFirst {
      installationReminder()
    }
}

application {
    mainClass = 'tla.web.App'
}

test {
    useJUnitPlatform()
    finalizedBy 'jacocoTestReport'
}

jacocoTestReport {
    reports {
        xml.required.set(true)
        html.required.set(true)
    }
    finalizedBy 'generateJacocoBadge'
}

